# AdvancedMetronome

./: .gitignore  .travis.yml  AdvancedMetronome.pro  CMakeLists.txt  LICENSE  MetronomeGenerator.pro  codecov.yml  readme.md  resources.qrc
data/packaging/RPM/: .gitignore  advancedmetronome.spec
data/packaging/Windows/: config.xml  create_installer.bat
data/packaging/Windows/application/meta/: installscript.qs  package.xml
data/packaging/flatpak/: .gitignore  net.bartkessels.AdvancedMetronome.json  net.bartkessels.advancedmetronome.json
docs/: SDD.md  SRS.md
docs/diagrams/: AdvancedMetrome_UML.xmi  class_diagram.puml
resources/: resources.qrc
resources/linux/: net.bartkessels.advancedmetronome.appdata.xml  net.bartkessels.advancedmetronome.desktop  net.bartkessels.advancedmetronome.desktop.desktop
resources/mac/: net.bartkessels.advancedmetronome.icns
resources/windows/: net.bartkessels.advancedmetronome.rc
src/: CMakeLists.txt  audiorecorder.cpp  audiorecorder.h  imeasure.h  imetronome.h  main.cpp  mainwindow.cpp  mainwindow.h  measure.cpp  measure.h  merge.cpp  merge.h  metronome.cpp  metronome.h
src/domain/contracts/: MetronomePlayer.hpp  SoundEngine.hpp
src/domain/model/: Measure.cpp  Measure.hpp  Metronome.cpp  Metronome.hpp  TimeSignature.cpp  TimeSignature.hpp
src/domain/players/: MetronomeSoundPlayer.cpp  MetronomeSoundPlayer.hpp
src/domain/sound_engines/: QtSoundEngine.cpp  QtSoundEngine.hpp
src/model/: Measure.hpp  TimeSignature.cpp  TimeSignature.hpp
src/ui/: mainwindow.ui  measure.ui
tests/: CMakeLists.txt
tests/domain/model/: tst_Metronome.cpp  tst_TimeSignature.cpp
tests/model/: tst_TimeSignature.cpp
translations/: advancedmetronome_nl.qm  advancedmetronome_nl.ts
